--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue": "^0.8.0",
         "bootstrap": "^5.3.5",
+        "chart.js": "^4.5.0",
         "sweetalert2": "^11.19.1",
         "vue": "^2.7.16",
+        "vue-chartjs": "^5.3.2",
         "vuex": "^3.6.2"
     }
 }
