--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "@inertiajs/inertia-vue": "^0.8.0",
         "bootstrap": "^5.3.5",
         "chart.js": "^4.5.0",
+        "exceljs": "^4.4.0",
         "sweetalert2": "^11.19.1",
         "vue": "^2.7.16",
         "vue-chartjs": "^5.3.2",
-        "vuex": "^3.6.2"
+        "vuex": "^3.6.2",
+        "xlsx": "^0.18.5"
     }
 }
